--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
         "sass": "^1.69.7",
         "server-only": "^0.0.1",
         "swr": "^2.2.4",
+        "timers": "^0.1.1",
+        "usehooks-ts": "^2.13.0",
         "uuidv4": "^6.2.13"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
-        "@types/node": "^20",
+        "@types/node": "^20.11.25",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
