--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 3020",
         "build": "prisma generate && next build",
         "start": "next start",
         "test": "next start -p 3020",
@@ -19,6 +19,7 @@
         "date-fns": "^3.2.0",
         "iron-session": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
         "next": "14.0.4",
         "next-international": "^1.2.3",
         "playwright": "^1.41.1",
@@ -28,7 +29,7 @@
         "react-dom": "^18",
         "react-error-boundary": "^4.0.12",
         "react-fontawesome": "^1.7.1",
-        "react-hook-form": "^7.49.3",
+        "react-hook-form": "^7.51.2",
         "react-toastify": "^10.0.2",
         "sass": "^1.69.7",
         "server-only": "^0.0.1",
