--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-fontawesome": "^1.7.1",
         "react-hook-form": "^7.51.2",
         "react-toastify": "^10.0.2",
+        "react-tooltip": "^5.26.3",
         "sass": "^1.69.7",
         "server-only": "^0.0.1",
         "swr": "^2.2.4",
