imported zod libary. made fist trys of implementing it

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "swr": "^2.2.4",
         "timers": "^0.1.1",
         "usehooks-ts": "^2.13.0",
-        "uuidv4": "^6.2.13"
+        "uuidv4": "^6.2.13",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
