--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "test": "next start -p 3021",
         "lint": "next lint"
     },
+    "prisma": {
+        "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -41,11 +44,12 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
-        "@types/node": "^20.11.25",
+        "@types/node": "^20.14.9",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.0.4",
-        "typescript": "^5"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.3"
     }
 }
