--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "prisma": "^5.8.0",
         "react": "^18",
         "react-bootstrap": "^2.9.2",
+        "react-date-picker": "^11.0.0",
         "react-dom": "^18",
         "react-error-boundary": "^4.0.12",
         "react-fontawesome": "^1.7.1",
