--- a/package.json
+++ b/package.json
@@ -19,20 +19,25 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@hookform/resolvers": "^3.9.0",
         "@prisma/client": "^5.8.0",
+        "@react-email/html": "^0.0.10",
+        "@react-email/render": "^1.0.0",
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.2",
         "date-fns": "^3.2.0",
+        "exceljs": "^4.4.0",
         "iron-session": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.30.1",
         "next": "^14.2.3",
         "next-international": "^1.2.3",
+        "nodemailer": "^6.9.14",
         "playwright": "^1.41.1",
         "prisma": "^5.8.0",
         "react": "^18",
         "react-bootstrap": "^2.9.2",
         "react-date-picker": "^11.0.0",
         "react-dom": "^18",
+        "react-email": "^3.0.1",
         "react-error-boundary": "^4.0.12",
         "react-fontawesome": "^1.7.1",
         "react-hook-form": "^7.51.2",
@@ -49,6 +54,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/node": "^20.14.9",
+        "@types/nodemailer": "^6.4.15",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
