--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.2",
         "date-fns": "^3.2.0",
+        "dayjs": "^1.11.13",
         "exceljs": "^4.4.0",
         "iron-session": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
-        "moment": "^2.30.1",
         "next": "^14.2.3",
         "next-international": "^1.2.3",
         "nodemailer": "^6.9.14",
