--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "dev": "next dev -p 3021",
         "build": "prisma generate && next build",
         "start": "next start -p 3021",
-        "test": "next start -p 3021",
-        "lint": "next lint"
+        "test": "playwright test",
+        "lint": "next lint",
+        "test-ct": "playwright test -c playwright-ct.config.ts"
     },
     "prisma": {
         "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -37,7 +38,7 @@
         "react-bootstrap": "^2.9.2",
         "react-date-picker": "^11.0.0",
         "react-dom": "^18",
-        "react-email": "^3.0.1",
+        "react-email": "^1.10.1",
         "react-error-boundary": "^4.0.12",
         "react-fontawesome": "^1.7.1",
         "react-hook-form": "^7.51.2",
@@ -52,13 +53,23 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@babel/core": "^7.25.8",
+        "@playwright/experimental-ct-react": "^1.47.2",
+        "@swc/core": "^1.7.36",
+        "@swc/jest": "^0.2.36",
+        "@testing-library/jest-dom": "^6.5.0",
+        "@testing-library/react": "^16.0.1",
         "@types/bcrypt": "^5.0.2",
+        "@types/jest": "^29.5.13",
         "@types/node": "^20.14.9",
         "@types/nodemailer": "^6.4.15",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.0.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
