--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
         "eslint-config-next": "14.0.4",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-html-reporter": "^3.10.2",
+        "jest-mock-extended": "^4.0.0-beta1",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
