--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "test-server-actions",
-    "version": "0.1.0",
+    "name": "uniform-administration",
+    "version": "2.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev -p 3021",
