--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@prisma/client": "^5.8.0",
         "@react-email/html": "^0.0.10",
         "@react-email/render": "^1.0.0",
+        "@types/react-dnd": "^3.0.2",
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.2",
         "date-fns": "^3.2.0",
@@ -37,6 +38,8 @@
         "react": "^18",
         "react-bootstrap": "^2.9.2",
         "react-date-picker": "^11.0.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18",
         "react-email": "^1.10.1",
         "react-error-boundary": "^4.0.12",
