--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     },
     "devDependencies": {
         "@babel/core": "^7.25.8",
+        "@jest/globals": "^29.7.0",
         "@playwright/experimental-ct-react": "^1.47.2",
         "@swc/core": "^1.7.36",
         "@swc/jest": "^0.2.36",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.1",
+        "@testing-library/user-event": "^14.6.1",
         "@types/bcrypt": "^5.0.2",
         "@types/jest": "^29.5.13",
         "@types/node": "^20.14.9",
@@ -74,7 +76,7 @@
         "jest-environment-jsdom": "^29.7.0",
         "jest-html-reporter": "^3.10.2",
         "jest-mock-extended": "^4.0.0-beta1",
-        "ts-jest": "^29.2.5",
+        "ts-jest": "^29.3.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
     }
