--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,3 +50,9 @@ jobs:
       run: npx playwright install
     - name: run e2e tests
       run: npm run test:e2e
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
