--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,7 +51,7 @@ jobs:
     - name: run e2e tests
       run: npm run test:e2e
     - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      if: ${{ failure() && steps.e2e.outcome == 'failure' }}
       with:
         name: playwright-report
         path: playwright-report/
