--- a/package.json
+++ b/package.json
@@ -20,41 +20,41 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
-        "@hookform/resolvers": "^3.9.0",
-        "@prisma/client": "^5.8.0",
+        "@hookform/resolvers": "^5.0.1",
+        "@prisma/client": "^6.6.0",
         "@react-email/html": "^0.0.11",
         "@react-email/render": "^1.0.6",
         "@types/react-dnd": "^3.0.2",
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.5",
-        "date-fns": "^3.2.0",
+        "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
         "exceljs": "^4.4.0",
         "iron-session": "^8.0.4",
         "jsonwebtoken": "^9.0.2",
-        "next": "^14.2.25",
+        "next": "^15.3.0",
         "next-international": "^1.3.1",
         "nodemailer": "^6.10.1",
         "playwright": "^1.51.1",
-        "prisma": "^5.8.0",
-        "react": "^18",
+        "prisma": "^6.6.0",
+        "react": "^19.1.0",
         "react-bootstrap": "^2.10.9",
         "react-date-picker": "^11.0.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
-        "react-dom": "^18",
+        "react-dom": "^19.1.0",
         "react-email": "^4.0.7",
-        "react-error-boundary": "^4.0.12",
+        "react-error-boundary": "^5.0.0",
         "react-fontawesome": "^1.7.1",
         "react-hook-form": "^7.55.0",
-        "react-toastify": "^10.0.2",
+        "react-toastify": "^11.0.5",
         "react-tooltip": "^5.28.1",
         "sass": "^1.86.3",
         "server-only": "^0.0.1",
         "swr": "^2.3.3",
         "@swc/core": "^1.11.20",
         "timers": "^0.1.1",
-        "usehooks-ts": "^2.13.0",
+        "usehooks-ts": "^3.1.1",
         "uuidv4": "^6.2.13",
         "zod": "^3.24.2"
     },
@@ -67,15 +67,15 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/bcrypt": "^5.0.2",
         "@types/jest": "^29.5.14",
-        "@types/node": "^20.14.9",
+        "@types/node": "22.14.0",
         "@types/nodemailer": "^6.4.17",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.0.4",
+        "@types/react": "^19.1.1",
+        "@types/react-dom": "^19.1.2",
+        "eslint": "^9.24.0",
+        "eslint-config-next": "15.3.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "jest-html-reporter": "^3.10.2",
+        "jest-html-reporter": "^4.1.0",
         "jest-mock-extended": "^4.0.0-beta1",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
