--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "uniform-administration",
     "version": "2.1.0",
     "private": true,
+    "engines": {
+        "node": "22.14.0"
+    },
     "scripts": {
         "dev": "next dev -p 3021",
         "build": "next build",
