--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "@prisma/client": "^6.6.0",
         "@react-email/html": "^0.0.11",
         "@react-email/render": "^1.0.6",
+        "@swc/core": "^1.11.20",
         "@types/react-dnd": "^3.0.2",
         "bcrypt": "^5.1.1",
         "bootstrap": "^5.3.5",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
+        "debounce": "^2.2.0",
         "exceljs": "^4.4.0",
         "iron-session": "^8.0.4",
         "jsonwebtoken": "^9.0.2",
@@ -55,7 +57,6 @@
         "sass": "^1.86.3",
         "server-only": "^0.0.1",
         "swr": "^2.3.3",
-        "@swc/core": "^1.11.20",
         "timers": "^0.1.1",
         "usehooks-ts": "^3.1.1",
         "uuidv4": "^6.2.13",
