--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "next": "^15.3.0",
         "next-international": "^1.3.1",
         "nodemailer": "^6.10.1",
-        "playwright": "^1.51.1",
         "prisma": "^6.6.0",
         "react": "^19.1.0",
         "react-bootstrap": "^2.10.9",
@@ -75,12 +74,15 @@
         "@types/nodemailer": "^6.4.17",
         "@types/react": "^19.1.1",
         "@types/react-dom": "^19.1.2",
-        "eslint": "^9.24.0",
+        "@typescript-eslint/eslint-plugin": "^8.32.1",
+        "eslint": "^9.27.0",
         "eslint-config-next": "15.3.0",
+        "eslint-plugin-react": "^7.37.5",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-html-reporter": "^4.1.0",
         "jest-mock-extended": "^4.0.0-beta1",
+        "playwright": "^1.51.1",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
