--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/bcrypt": "^5.0.2",
         "@types/jest": "^29.5.14",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "22.14.0",
         "@types/nodemailer": "^6.4.17",
         "@types/react": "^19.1.1",
