--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
         "@typescript-eslint/eslint-plugin": "^8.32.1",
         "eslint": "^9.27.0",
         "eslint-config-next": "15.3.0",
-        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-jest": "^28.11.0",
+        "eslint-plugin-playwright": "^2.2.0",
+        "eslint-plugin-testing-library": "^7.2.1",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-html-reporter": "^4.1.0",
