--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "dev": "next dev -p 3021",
         "build": "next build",
+        "build:test": "cross-env NEXT_PUBLIC_STAGE=TEST next build",
         "start": "next start -p 3021",
         "test:e2e": "playwright test",
         "test:jest": "npm run test:jest:components && npm run test:jest:dal",
@@ -31,6 +32,7 @@
         "@types/react-dnd": "3.0.2",
         "bcrypt": "6.0.0",
         "bootstrap": "5.3.6",
+        "cross-env": "^7.0.3",
         "date-fns": "4.1.0",
         "dayjs": "1.11.13",
         "debounce": "2.2.0",
