--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "uniform-administration",
-    "version": "2.4.0-SNAPSHOT",
+    "version": "2.4.0",
     "private": true,
     "engines": {
         "node": "22.14.0"
