--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
         "build:test": "cross-env NEXT_PUBLIC_STAGE=TEST next build",
         "start": "next start -p 3021",
         "test:e2e": "playwright test",
-        "test:all": "npm run test:unit && npm run test:integration",
-        "test:unit": "npm run test:unit:components && npm run test:unit:dal",
-        "test:unit:components": "jest --config jest.frontend.config.ts",
-        "test:unit:dal": "jest --config jest.dal-unit.config.ts",
-        "test:integration": "jest --config jest.dal-integration.config.ts",
-        "test:integration:dal": "jest --config jest.dal-integration.config.ts",
-        "test:watch": "jest --config jest.frontend.config.ts --watch",
+        "test:all": "npm run test:dal && npm run test:components",
+        "test:components": "jest --config jest.frontend.config.ts",
+        "test:dal": "npm run test:dal:unit && npm run test:dal:integration",
+        "test:dal:unit": "jest --config jest.dal-unit.config.ts",
+        "test:dal:integration": "jest --config jest.dal-integration.config.ts",
         "test:watch:components": "jest --config jest.frontend.config.ts --watch",
-        "test:watch:dal": "jest --config jest.dal-unit.config.ts --watch",
-        "test:watch:integration": "jest --config jest.dal-integration.config.ts --watch",
-        "test:coverage": "npm run test:unit -- --coverage",
+        "test:watch:dal:unit": "jest --config jest.dal-unit.config.ts --watch",
+        "test:watch:dal:integration": "jest --config jest.dal-integration.config.ts --watch",
+        "test:coverage:all": "npm run test:all -- --coverage",
         "test:coverage:components": "jest --config jest.frontend.config.ts --coverage",
         "test:coverage:dal": "jest --config jest.dal-unit.config.ts --coverage",
         "lint": "eslint src tests"
@@ -96,7 +94,7 @@
         "jest": "29.7.0",
         "jest-environment-jsdom": "29.7.0",
         "jest-html-reporter": "4.1.0",
-        "jest-mock-extended": "4.0.0-beta1",
+        "jest-mock-extended": "^4.0.0-beta1",
         "playwright": "1.53.1",
         "ts-jest": "29.4.0",
         "ts-node": "10.9.2",
