--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -99,7 +99,7 @@ jobs:
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: [jest-unit, jest-frontend, jest-integration, lint]
+    needs: [jest-dal-unit, jest-components, jest-dal-integration, lint]
     env:
       DATABASE_URL: ${{ vars.DATABASE_URL }}
       IRON_SESSION_KEY: ${{ vars.IRON_SESSION_KEY }}
