--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -139,9 +139,11 @@ jobs:
           name: build-files
           path: |
             .next/
-            public/
+            node_modules/
             package.json
+            package-lock.json
             prisma/
+            public/
           retention-days: 1
 
   # Stage 3: E2E Tests
@@ -176,8 +178,6 @@ jobs:
         with:
           node-version: 22.14.0
           cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
