--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -4,7 +4,7 @@
 name: Validate MR
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "release", "main" ]
 
 jobs:
   build:
