--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "next-international": "1.3.1",
         "nodemailer": "7.0.5",
         "prisma": "6.13.0",
+        "rate-limiter-flexible": "^7.3.0",
         "react": "19.1.1",
         "react-bootstrap": "2.10.10",
         "react-date-picker": "11.0.0",
