Change E2E Tests runner and add Playwright caching

--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -146,7 +146,7 @@ jobs:
   # Stage 3: E2E Tests
   e2e:
     name: E2E Tests
-    runs-on: mcr.microsoft.com/playwright:v1.55.0-noble
+    runs-on: ubuntu-latest
     needs: build
     env:
       DATABASE_URL: ${{ vars.DATABASE_URL }}
@@ -183,6 +183,18 @@ jobs:
         run: npm ci
       - name: Setup database
         run: npx prisma migrate deploy && npx prisma db seed
+      - name: Get Playwright version
+        id: playwright-version
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/@playwright/test'].version)")" >> $GITHUB_OUTPUT
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.PLAYWRIGHT_VERSION }}-chromium-firefox
+      - name: Install Playwright browsers
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: npx playwright install chromium firefox
       - name: Run E2E tests
         run: npm run test:e2e
       - name: Upload Playwright report
