--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
         "next": "15.4.6",
         "next-international": "1.3.1",
         "nodemailer": "7.0.5",
+        "otpauth": "^9.4.1",
         "prisma": "6.13.0",
+        "qrcode.react": "^4.2.0",
         "rate-limiter-flexible": "^7.3.0",
         "react": "19.1.1",
         "react-bootstrap": "2.10.10",
