--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-hook-form": "7.66.0",
         "react-toastify": "11.0.5",
         "react-tooltip": "5.30.0",
+        "recharts": "^3.4.1",
         "sass": "1.93.3",
         "server-only": "0.0.1",
         "swr": "2.3.6",
